fix spacing

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ body::before {
 /* HEADER */
 header {
   text-align: center;
-  padding: 72px 24px 48px;
+  padding: 48px 24px 48px;
   position: relative;
 }
 
@@ -56,7 +56,7 @@ header::after {
   color: var(--ink);
   font-weight: 500;
   margin-bottom: 16px;
-  margin-top: 16px
+  margin-top: 24px
 }
 
 .site-title {
